<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin_16dp"
    android:orientation="vertical"
    android:focusable="true"
    tools:context=".SummaryFragment">

    <LinearLayout
        android:id="@+id/summaryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/margin_16dp">

    <TextView
        android:id="@+id/quantity_label"
        style="@style/Widget.Cupcake.TextView.OrderSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/quantity"
        style="@style/Widget.Cupcake.TextView.OrderSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/order_summary_margin"
        android:text="@{viewModel.quantity.toString()}"
        tools:text="6 cupcakes" />

    <View
        android:id="@+id/divider1"
        style="@style/Widget.Cupcake.Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginBottom="@dimen/side_margin" />

    <TextView
        android:id="@+id/flavor_label"
        style="@style/Widget.Cupcake.TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flavor" />

    <TextView
        android:id="@+id/flavor"
        style="@style/Widget.Cupcake.TextView.OrderSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/order_summary_margin"
        android:text="@{viewModel.flavor}"
        tools:text="Chocolate" />

    <View
        android:id="@+id/divider2"
        style="@style/Widget.Cupcake.Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginBottom="@dimen/side_margin" />

    <TextView
        android:id="@+id/pickup_label"
        style="@style/Widget.Cupcake.TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickup_date" />

    <TextView
        android:id="@+id/date"
        style="@style/Widget.Cupcake.TextView.OrderSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/order_summary_margin"
        android:text="@{viewModel.date}"
        tools:text="Sunday" />

    <View
        android:id="@+id/divider3"
        style="@style/Widget.Cupcake.Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginBottom="@dimen/margin_between_elements" />

    <TextView
        android:id="@+id/total"
        style="@style/Widget.Cupcake.TextView.FinalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/side_margin"
        android:text="@{@string/total_price(viewModel.price)}"
        tools:text="Total $5.00" />

    </LinearLayout>

    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/side_margin"
        android:backgroundTint="@color/pink_600"
        android:onClick="@{() -> summaryFragment.sendOrder()}"
        android:text="@string/send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summaryLayout" />

    <Button
        android:id="@+id/cancel_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_elements"
        android:onClick="@{() -> summaryFragment.cancelOrder()}"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@+id/send_button"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>